--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js",
+    "start-db": "docker-compose -f dev-db/docker-postgres.yml up"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/LauritsHG/SWABE_Assignment2/issues"
   },
-  "homepage": "https://github.com/LauritsHG/SWABE_Assignment2#readme"
+  "homepage": "https://github.com/LauritsHG/SWABE_Assignment2#readme",
+  "dependencies": {
+    "@prisma/client": "^3.10.0",
+    "apollo-server": "^3.6.4",
+    "graphql": "^16.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "prisma": "^3.10.0"
+  }
 }
